chore(polish): use List.getLast() (Java 21) + refresh assets.txt
Tiny auto-refactor — replaced active.get(active.size() - 1) with
active.getLast() in resumeLatestRun(). Java 21 idiom, more readable.

Also refresh auto-generated assets.txt to include all PixelLab-
generated PNG sprite files added across the Sprint 9 batches.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>